[package]
name = "mqtt2influxdb2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.0", features = ["full"] }
log = "0.4"
simple_logger = "2.0"

anyhow = "1.0.93"

signal-hook = "0.3.14"
signal-hook-tokio = {version = "0.3.1", features = ["futures-v0_3"]}

influxdb2 = "0.3"

paho-mqtt = {version = "0.11", default-features=false, features=["bundled"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"

futures = "0.3.14"

async-trait = "0.1.56"
